--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -6,5 +6,31 @@
          "mis-favoritos": "My Favorites",
          "mi-cuenta": "My Account",
          "eliminar-cuenta": "Delete Account"
+    },
+    "filter":{
+        "buscar-producto": "Search Product",
+         "precio-minimo": "Minimum Price",
+         "precio-maximo": "Maximun Price",
+         "compra-venta": "Buy-Shell",
+         "buscar": "Search"
+    },
+     "newAdvert":{
+        "nombre-producto":"Name of Product",
+        "descripcion": "Description:",
+        "compra": "Buy",
+        "venta": "Shell",
+        "precio-producto":"Product Price",
+        "seleccionar-archivo":"Select file",
+        "archivo-seleccionado": "No file selected",
+        "crear-anuncio": "Create Ad"
+        
+    },
+
+    "advert":{
+        "vendido": "sold",
+        "reservado": "reserved",
+        "venta": "Shell",
+        "busco": "Seek"
     }
+
 }
