--- a/public/assets/i18n/common/en.json
+++ b/public/assets/i18n/common/en.json
@@ -1,6 +1,6 @@
 {
     "header":{
-        "mensaje": "Message",
+        "mensaje": "Messages",
         "subir-producto": "Upload Product",
         "mis-anuncios": "My Listings",
          "mis-favoritos": "My Favorites",
