--- a/public/assets/i18n/common/es.json
+++ b/public/assets/i18n/common/es.json
@@ -1,6 +1,6 @@
 {
     "header":{
-        "mensaje": "Mensaje",
+        "mensaje": "Mensajes",
         "subir-producto": "Subir Producto",
         "mis-anuncios": "Mis Anuncios",
         "mis-favoritos": "Mis Favoritos",
