--- a/public/assets/i18n/common/en.json
+++ b/public/assets/i18n/common/en.json
@@ -39,8 +39,8 @@
         "mensaje": "Messages",
         "mensajes": "You have messages from",
         "conversaciones": "You do not have pending chats",
-        "para-comprar": "To buy the ad",
-        "para-vender": "To sell the ad",
+        "para-comprar": "For the ad",
+        "para-vender": "For your ad",
         "propietario": "Owner",
         "escribe": "Write your message"
     },
