--- a/public/assets/i18n/common/es.json
+++ b/public/assets/i18n/common/es.json
@@ -65,8 +65,8 @@
         "mensaje": "Mensajes",
         "mensajes": "Tienes mensajes de",
         "conversaciones": "No tienes conversaciones pendientes",
-        "para-comprar": "Para comprar el anuncio",
-        "para-vender": "Para vender el anuncio",
+        "para-comprar": "Para el anuncio",
+        "para-vender": "Para tu anuncio",
         "propietario": "Propietario",
         "escribe": "Escribe tu mensaje"
     },
